github link overlap fix

--- a/app/global.less
+++ b/app/global.less
@@ -28,7 +28,9 @@ html, body {
   .container {
     width: 90%;
   }
+}
 
+@media (max-width: 800px) {
   .ribbon {
     display: none;
   }
