--- a/app/main/style.less
+++ b/app/main/style.less
@@ -36,6 +36,10 @@ main {
     color: #999;
     font-size: 1.2rem;
     background-color: #565656;
+
+    a {
+      color: #999;
+    }
   }
 }
 
